Fix spacing below comment reply form

--- a/components/Comment/styles.module.scss
+++ b/components/Comment/styles.module.scss
@@ -116,11 +116,15 @@
 	}
 
 	&-reply-form {
-		margin: 0.75em 0;
-	}
+		margin-top: 0.75em;
 
-	&-reply-form-actions {
-		margin-top: 2px;
+		&:not(:last-child) {
+			margin-bottom: 0.75em;
+		}
+
+		&-actions {
+			margin-top: 2px;
+		}
 	}
 }
 
